[package]
name = "glass_pumpkin"
version = "1.6.0"
description = "A cryptographically secure prime number generator based on crypto-bigint"
keywords = ["prime", "big", "cryptography", "generator", "number"]
license = "Apache-2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
repository = "https://github.com/mikelodder7/glass_pumpkin"
documentation = "https://docs.rs/glass_pumpkin"
homepage = "https://crates.io/crates/glass_pumpkin"
readme = "README.md"
edition = "2021"

[dependencies]
core2 = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
crypto-bigint = "0.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "gen_safe_prime"
harness = false

[profile.bench]
opt-level = 3
